Added navigation options to the navigation menu

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       </div>
     </header>
     <div class="mdl-layout__drawer">
-      <span class="mdl-layout-title">Other websites</span>
+      <span class="mdl-layout-title">Navigate</span>
       <nav class="mdl-navigation">
         <a class="mdl-navigation__link" href="./index2.html">Second Website</a>
         <a class="mdl-navigation__link" href="">Link</a>
