--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-9">
-  <meta name="description" content="My first webpage, with proper style">
+  <meta name="description" content="My first webpage, with MDL">
   <meta name="keywords" content="mths, ics2o">
   <meta name="author" content="Mohamad">
   <meta name="viewport" conent="width=device-width, initial-scale=1.0">
@@ -34,9 +34,6 @@
       <span class="mdl-layout-title">Navigate</span>
       <nav class="mdl-navigation">
         <a class="mdl-navigation__link" href="./index2.html">Second Website</a>
-        <a class="mdl-navigation__link" href="">Link</a>
-        <a class="mdl-navigation__link" href="">Link</a>
-        <a class="mdl-navigation__link" href="">Link</a>
       </nav>
     </div>
     <main class="mdl-layout__content">
