--- a/index2.html
+++ b/index2.html
@@ -8,7 +8,7 @@
   <meta name="viewport" conent="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.amber-deep_orange.min.css" />
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/style2.css">
   <title>MDL modified website</title>
 </head>
 <body>
@@ -34,9 +34,6 @@
       <span class="mdl-layout-title">Navigate</span>
       <nav class="mdl-navigation">
         <a class="mdl-navigation__link" href="./index.html">First Website</a>
-        <a class="mdl-navigation__link" href="">Link</a>
-        <a class="mdl-navigation__link" href="">Link</a>
-        <a class="mdl-navigation__link" href="">Link</a>
       </nav>
     </div>
     <main class="mdl-layout__content">
@@ -50,11 +47,6 @@
       </div>
     </main>
     <!-- Icon List -->
-    <style>
-      .demo-list-icon {
-        width: 300px;
-      }
-    </style>
     <ul class="demo-list-icon mdl-list">
       <li class="mdl-list__item">
         <span class="mdl-list__item-primary-content">
